--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </nav>
 <div class="heading">
     <h1 class="display-5 title">NovelBot - wielofunkcyjny bot Discord!</h1>
-    <p class="subtitle">NovelBot to wielofunkcyjny, przydatny, unikatowy, wielozadaniowy bot Discord.<br />Posiada funkcje moderacyjne oraz administracyjne.</p>
+    <p class="subtitle">NovelBot to <b>wielofunkcyjny, przydatny, unikatowy, wielozadaniowy</b> bot Discord.<br />Posiada funkcje <b>Moderacyjne</b> oraz <b>Administracyjne</b>.</p>
     <a class="btn btn-primary btn-lg" href="https://discord.gg/SkhSVycE9C" target="_blank" role="button">Serwer Developerski</a>
     <a class="btn btn-secondary btn-lg" href="https://bit.ly/3tAytJU" target="_blank" role="button">Dodaj NovelBot!</a>
     <br /><br /><br /><br /><br /><br />
@@ -89,7 +89,7 @@
         <div class="bot-footer">
             Copyright © cactusiuu#9588 - 2023
         </div><br/>
-        <div class="nouridio">Strona stworzona przez <a> cactusiuu#9588</a></div>
+        <div class="nouridio">Strona stworzona przez <a class="cactus"> cactusiuu#9588</a></div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
