--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     </div>
 </nav>
 <div class="imgdiv">
-    <center><img class="img" src="./assets/cactusiuu avatar.webp"></center>
+    <center><img class="img" src="./assets/avatar.webp"></center>
     <div class="nouridio2">cactusiuu#9588</div>
     <div class="tekst">Jestem właścicielem NovelBot! Uwielbiam programować. Języki programowania, które potrafię to <b>html, css</b> oraz <b>js</b>. Moim marzeniem jest wypromować mojego bota oraz stworzyć ogromną społeczność.</div>
 </div>
